syntax="proto3";

package account;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "./;account";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
		title: "Account service";
		version: "v1";
	};
    schemes: HTTP;
    schemes: HTTPS;
};

service AccountService {
    rpc Create(CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/api/v1/accounts"
            body: "*"
        };
    };
	rpc Delete(DeleteAccountRequest) returns (DeleteAccountResponse) {
        option (google.api.http) = {
            delete: "/api/v1/accounts/{id}"
        };
    };
    rpc Update(UpdateAccountRequest) returns (UpdateAccountResponse) {
		option (google.api.http) = {
            patch: "/api/v1/accounts/{account.id}"
            body: "*"
        };
	}
	rpc List(ListAccountsRequest) returns (ListAccountsResponse) {
        option (google.api.http) = {
            get: "/api/v1/accounts"
        };
    };
    rpc ListStream(ListAccountsRequest) returns (stream Account) {
        option (google.api.http) = {
            get: "/api/v1/accounts/stream"
        };
    };
}

enum Bank {
    VCB = 0;
    ACB = 1;
    VIB = 2;
}

message Account {
    string id = 1;
    string name = 2;
    Bank bank = 3;
    string user_id = 4;
    double balance = 5;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message CreateAccountRequest {
    string user_id = 1;
	string name = 2;
    Bank bank = 3;
    double balance = 4;
}

message CreateAccountResponse {
	Account account = 1;
}

message ListAccountsRequest {
    google.protobuf.StringValue user_id = 1 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            pattern: "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
            title: "user_id",
            description: "user id",
            format: "uuid",
            example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""
        }
    ];
	google.protobuf.StringValue name = 2;
    google.protobuf.StringValue id = 3 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            pattern: "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
            title: "id",
            description: "account id",
            format: "uuid",
            example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""
        }
    ];
    google.protobuf.DoubleValue balance_min = 4;
    google.protobuf.DoubleValue balance_max = 5;
    // list users created after timestamp
    google.protobuf.Timestamp created_since = 6;
    // list users in duration from created_since
    google.protobuf.Duration older_then = 7;
}

message ListAccountsResponse {
	repeated Account accounts = 1;
}

message UpdateAccountRequest {
    Account account = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateAccountResponse {
	Account account = 1;
}

message DeleteAccountRequest {
    string id = 1;
    string user_id = 2;
}

message DeleteAccountResponse {
	string id = 1;
}